Fix T38439: allow IOR in range [0, inf] instead of [1, inf] in Cycles.

The same can be achieved by flipping normals on the mesh, but it can be
convenient to do this in the shader.